Removed User Edit and Security links, added Inbox link.

--- a/dark-mobile.css
+++ b/dark-mobile.css
@@ -1486,9 +1486,10 @@ h4.min_padding {
 #menu #nav_rules,
 #menu #nav_wiki,
 #menu #nav_staff,
+#userinfo #userinfo_username #nav_useredit,
+#userinfo #userinfo_username #nav_usersecurity,
 #userinfo #userinfo_stats,
 #userinfo #userinfo_major,
-#userinfo #userinfo_minor #nav_inbox,
 #userinfo #userinfo_minor #nav_staffinbox,
 #userinfo #userinfo_minor #nav_uploaded,
 #userinfo #userinfo_minor #nav_bookmarks,
